# tigerwm

./: .gitignore  LICENSE  README.md  pyproject.toml  tigerwm_steps_io.txt
docs/: pipeline_steps.md
examples/: run_default_p4.py  run_p3.py
src/tigerwm/: __init__.py  pipeline.py
src/tigerwm/steps/: denoise.py  gdm.py  mask.py  roi.py  tensor.py  utils.py
