[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tigerwm"
version = "0.1.0"
description = "DTI pipeline utilities for WM"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "numpy",
  "nibabel",
  "dipy",
  "pandas",
  "tigerbx @ https://github.com/htylab/tigerbx/archive/release.zip",
]

